--- a/index.html
+++ b/index.html
@@ -6,4 +6,17 @@
         <meta name="viewport" content='width=device-witdth, initial-scale="1"'>
         <title>Clase HTML</title>
     </head>
+    <body>
+        <div>
+            <a href="logo"></a>
+        </div>
+        <nav>
+             <a href=alt="imagen1">Text 1 mini link</a>
+             <a href=alt="imagen2">Text 2 mini link</a>
+             <a href=alt="imagen3">Text 3 mini link</a>
+        </nav>
+        <nav>
+            <a href=alt="boton"></a>
+        </nav>
+    </body>
 </html>
