se crean para link de navegaciòn

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
              <a href=alt="imagen2">Text 2 mini link</a>
              <a href=alt="imagen3">Text 3 mini link</a>
         </nav>
+        <img src="" alt="">
         <nav>
             <a href=alt="boton"></a>
         </nav>
