se realiza inserción de imagen

--- a/index.html
+++ b/index.html
@@ -10,13 +10,23 @@
         <div>
             <a href="logo"></a>
         </div>
+        <a
+             src="./imagenes/nix_img.jfif" 
+             alt="Imagen de Nix"
+             data-testo="esto lo usaré en CSS o JS"
+             ></a>       
         <nav>
              <a href=alt="imagen1">Text 1 mini link</a>
              <a href=alt="imagen2">Text 2 mini link</a>
              <a href=alt="imagen3">Text 3 mini link</a>
         </nav>
-        <img src="" alt="">
+        <img src="http://placekitten.com/g/200/300" 
+        alt="Imagen de un michi"
+        data-testo="Esto se ocupa luego en CSS o JS">
         <nav>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            Maiores velit rerum sit dicta labore! Vitae optio, ipsa dolores perspiciatis 
+            impedit sapiente consequatur, dolor libero numquam consequuntur quo velit. Id, quas?
             <a href=alt="boton"></a>
         </nav>
     </body>
