the img stuff was corrected

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <a href="logo"></a>
         </div>
         <a
-             src="./imagenes/nix_img.jfif" 
+             src="../imagenes/nix_img.jfif" 
              alt="Imagen de Nix"
              data-testo="esto lo usaré en CSS o JS"
              ></a>       
