added header and title

--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
         <title>Clase HTML</title>
     </head>
     <body>
+        <h1>UX Designer</h1>
+        <h2>Hi there<span>I'm Sara Jones</span></h2>
         <div>
             <a href="logo"></a>
         </div>
         <a
-             src="../imagenes/nix_img.jfif" 
+             src="./imagenes/nix_img.jfif" 
              alt="Imagen de Nix"
              data-testo="esto lo usaré en CSS o JS"
              ></a>       
