--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <h1>UX Designer</h1>
-        <h2>Hi there<span>I'm Sara Jones</span></h2>
+        <h2>Hi there<br>I'm Sara Jones</h2>
         <div>
             <a href="logo"></a>
         </div>
