added font properties

--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
         <title>Clase HTML</title>
     </head>
     <body>
+        <style>
+            h1 {
+                font-size: 20px;
+                font-family: 'Tahoma', sans-serif;
+                font-weight: bold;
+                color: #333;
+            }
+            h2 {
+                font-size: 32px;
+                font-family: 'Tahoma', sans-serif;
+                font-weight: normal;
+            }
+        </style>
+
         <h1>UX Designer</h1>
         <h2>Hi there<br>I'm Sara Jones</h2>
         <div>
