--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
         <div>
             <a href="logo"></a>
         </div>
-        <a
+        <img
              src="./imagenes/nix_img.jfif" 
              alt="Imagen de Nix"
              data-testo="esto lo usaré en CSS o JS"
-             ></a>       
+             ></img>       
         <nav>
              <a href=https://www.youtube.com/watch?v=dQw4w9WgXcQ="surprise">"DO NOT Click"</a>
              <a href=alt="imagen2">Text 2 mini link</a>
