--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </style>
 
         <h1>UX Designer</h1>
-        <h2>Hi there<br>I'm Sara Jones</h2>
+        <h2>Hi there<br>I'm Nix the Artificer</h2>
         <div>
             <a href="logo"></a>
         </div>
