--- a/index.html
+++ b/index.html
@@ -19,10 +19,16 @@
                 font-family: 'Tahoma', sans-serif;
                 font-weight: normal;
             }
+            h2 {
+                font-size: 16px;
+                font-family: 'Tahoma', sans-serif;
+                font-weight: normal;
+            }
         </style>
 
         <h1>UX Designer</h1>
         <h2>Hi there<br>I'm Nix the Artificer</h2>
+        <h4>Hi there<br>This is a test for my creators HTML proyect at ESAT, to make a page</h4>
         <div>
             <a href="logo"></a>
         </div>
@@ -30,6 +36,7 @@
              src="./imagenes/nix_img.jfif" 
              alt="Imagen de Nix"
              data-testo="esto lo usaré en CSS o JS"
+             align="right"
              ></img>       
         <nav>
              <a href=https://www.youtube.com/watch?v=dQw4w9WgXcQ="surprise">"DO NOT Click"</a>
