added stuff to the message

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
         <h1>UX Designer</h1>
         <h2>Hi there<br>I'm Nix the Artificer</h2>
-        <h4>Hi there<br>This is a test for my creators HTML proyect at ESAT, to make a page</h4>
+        <h4>This is a test for my creators HTML proyect at ESAT, to make a page<br> Spoiler alert: they're new to html and are probably <br> gonna make lots of mistakes, have fun watching them</h4>
         <div>
             <a href="logo"></a>
         </div>
