added something to change alignment of nix image

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
              src="./imagenes/nix_img.jfif" 
              alt="Imagen de Nix"
              data-testo="esto lo usaré en CSS o JS"
-             align="right"
+             style="float: right; margin-right: 20px;"
              ></img>       
         <nav>
              <a href=https://www.youtube.com/watch?v=dQw4w9WgXcQ="surprise">"DO NOT Click"</a>
