added new section

--- a/index.html
+++ b/index.html
@@ -71,5 +71,55 @@
             <h4>273+</h4>
             <h3>Clients Served</h3>
         </section>
+        <section>
+            <h2>Services</h2>
+            <p>Explore my design services, from user interface and experience to prototyping and testing. Let's craft <br>
+                exceptional digital experiences together.</p>
+
+            <img
+                src="inserte imagen aki" 
+                alt="Imagen de diseño"
+                data-testo="esto lo usaré en CSS o JS"
+            ></img> 
+            <h3>Design</h3>
+            <p>I specialize in web development <br> 
+                and design, creating visually appealing, <br>
+                user-friendly digital experiences.</p>
+            
+            <img
+                src="inserte imagen aki" 
+                alt="Imagen de branding"
+                data-testo="esto lo usaré en CSS o JS"
+            ></img> 
+            <h3>Branding</h3>
+            <p>I'm a branding expert, crafting <br>
+                unique visual identities that tell <br>
+                your story and resonate with your <br>
+                audience.</p>
+
+            <img
+                src="inserte imagen aki" 
+                alt="Imagen de UX"
+                data-testo="esto lo usaré en CSS o JS"
+            ></img> 
+            <h3>UX Research</h3>
+            <p>I specialize in user experience <br>
+                research, collaborating on web <br>
+                development, and ensuring user-<br>
+                friendly digital products.</p>
+
+            <img
+                src="inserte imagen aki" 
+                alt="Imagen de UTF-8"
+                data-testo="esto lo usaré en CSS o JS"
+            ></img> 
+            <h3>Usability Testing</h3>
+            <p>I perform usability testing and <br>
+                optimize designs websites based on real-user feedback <br>
+                for seamless interactions.</p>
+        </section>
+        <section>
+            
+        </section>
     </body>
 </html>
