added a new section

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
             <img
                 src="inserte imagen aki" 
-                alt="Imagen de UTF-8"
+                alt="Imagen de UT"
                 data-testo="esto lo usaré en CSS o JS"
             ></img> 
             <h3>Usability Testing</h3>
@@ -119,7 +119,64 @@
                 for seamless interactions.</p>
         </section>
         <section>
+            <h2>My portfolio</h2>
+            <p>Explore my design services, from user interface and experience to prototyping and testing. Let's craft <br>
+                exceptional digital experiences together.
+            </p>
+
+            <img
+                src="inserte imagen aki" 
+                alt="Imagen de portafolio 1"
+                data-testo="esto lo usaré en CSS o JS"
+            ></img> 
+            <h3>Educational Platform</h3>
+            <p>Web Design / Usability Testing</p>
+            <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+
+            <img
+            src="inserte imagen aki" 
+            alt="Imagen de portafolio 2"
+            data-testo="esto lo usaré en CSS o JS"
+            ></img> 
+            <h3>Travel App Design</h3>
+            <p>Ux Research/App Design</p>
+            <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
             
+            <img
+            src="inserte imagen aki" 
+            alt="Imagen de portafolio 3"
+            data-testo="esto lo usaré en CSS o JS"
+            ></img> 
+            <h3>Personal Page</h3>
+            <p>Web Design</p>
+            <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+
+            <img
+            src="inserte imagen aki" 
+            alt="Imagen de portafolio 4"
+            data-testo="esto lo usaré en CSS o JS"
+            ></img> 
+            <h3>Furniture Movbile App</h3>
+            <p>App Design</p>
+            <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+
+            <img
+            src="inserte imagen aki" 
+            alt="Imagen de portafolio 5"
+            data-testo="esto lo usaré en CSS o JS"
+            ></img> 
+            <h3>Coffee House Lnading Page</h3>
+            <p>UX Research/Web Design</p>
+            <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+
+            <img
+            src="inserte imagen aki" 
+            alt="Imagen de portafolio 6"
+            data-testo="esto lo usaré en CSS o JS"
+            ></img> 
+            <h3>Home Services Page</h3>
+            <p>Web design/Marketing</p>
+            <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
         </section>
     </body>
 </html>
