corrected text and added bars sections

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
             alt="Imagen de portafolio 4"
             data-testo="esto lo usaré en CSS o JS"
             ></img> 
-            <h3>Furniture Movbile App</h3>
+            <h3>Furniture Mobile App</h3>
             <p>App Design</p>
             <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 
@@ -165,7 +165,7 @@
             alt="Imagen de portafolio 5"
             data-testo="esto lo usaré en CSS o JS"
             ></img> 
-            <h3>Coffee House Lnading Page</h3>
+            <h3>Coffee House Landing Page</h3>
             <p>UX Research/Web Design</p>
             <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 
@@ -177,6 +177,41 @@
             <h3>Home Services Page</h3>
             <p>Web design/Marketing</p>
             <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+        </section>
+        <section>
+            <h2>Core Design Skills</h2>
+            <p>I excel in essential design skills, creating visually stunning and functional digital experiences. From UI <br>
+            design to UX research, my passion is to craft effective and memorable digital solutions.</p>
+
+            <label for="Interactiondesign">Interaction Design</label>
+            <progress id="Interactiondesign" max="100" value="60">
+            60%
+            </progress>
+
+            <label for="Usabilitytesting">Usability Testing</label>
+            <progress id="Usabilitytesting" max="100" value="70">
+            70%
+            </progress>
+
+            <label for="Userresearch">User Research</label>
+            <progress id="Userresearch" max="100" value="45">
+            45%
+            </progress>
+
+            <label for="Figma">Figma</label>
+            <progress id="Figma" max="100" value="95">
+            95%
+            </progress>
+
+            <label for="Prototyping">Prototyping</label>
+            <progress id="Prototyping" max="100" value="80">
+            80%
+            </progress>
+
+            <label for="Informationarchitecture">Information Architecture</label>
+            <progress id="Informationarchitecture" max="100" value="50">
+            50%
+            </progress>
         </section>
     </body>
 </html>
