new section with form

--- a/index.html
+++ b/index.html
@@ -213,5 +213,42 @@
             50%
             </progress>
         </section>
+        <section>
+            <h2>Get in Touch</h2>
+            <p>
+                Have a question or a project in mind? I'd love to hear from you. Let's <br>
+                chat and make something amazing together.
+            </p>
+
+            <img
+            src="inserte imagen aki" 
+            alt="icono tel"
+            data-testo="esto lo usaré en CSS o JS"
+            ></img>
+            <p>+1205 5872 321</p> 
+            <img
+            src="inserte imagen aki" 
+            alt="icono correo"
+            data-testo="esto lo usaré en CSS o JS"
+            ></img>
+            <p>contact@sarajonesdesign.com</p>
+            <img
+            src="inserte imagen aki" 
+            alt="icono direcciòn"
+            data-testo="esto lo usaré en CSS o JS"
+            ></img>
+            <p>1234 Design Street,Creativeville, Webland,Imaginary State, 98765</p>
+
+            <label for="name">Tu nombre completo</label>
+            <input type="text" id="name" placeholder="Jon Doe">
+            <label for="tel">Tu teléfono</label>
+            <input type="tel" id="tel" placeholder="+52 5532704905">
+            <label for="email">Tu correo electrónico</label>
+            <input type="email" id="email" placeholder="correo@servidor.com">
+            <textarea id="" maxlength="3" cols="30" rows="10"></textarea>
+        </section>
+        <footer>
+
+        </footer>
     </body>
 </html>
