added send mesaage and links

--- a/index.html
+++ b/index.html
@@ -238,14 +238,23 @@
             data-testo="esto lo usaré en CSS o JS"
             ></img>
             <p>1234 Design Street,Creativeville, Webland,Imaginary State, 98765</p>
+            <form>
+                <label for="name">Tu nombre completo</label>
+                <input type="text" id="name" placeholder="Jon Doe">
+                <label for="tel">Tu teléfono</label>
+                <input type="tel" id="tel" placeholder="+52 5532704905">
+                <label for="email">Tu correo electrónico</label>
+                <input type="email" id="email" placeholder="correo@servidor.com">
+                <textarea id="" maxlength="3" cols="30" rows="10"></textarea>
+                <button>Send Message</button>
+                <input type="submit" value="Enviar"
+            </form>
+            
 
-            <label for="name">Tu nombre completo</label>
-            <input type="text" id="name" placeholder="Jon Doe">
-            <label for="tel">Tu teléfono</label>
-            <input type="tel" id="tel" placeholder="+52 5532704905">
-            <label for="email">Tu correo electrónico</label>
-            <input type="email" id="email" placeholder="correo@servidor.com">
-            <textarea id="" maxlength="3" cols="30" rows="10"></textarea>
+            <link rel="ícono twitter" type="image/x-icon" href="favicon.ico" />
+            <link rel="ícono instagram" type="image/x-icon" href="favicon.ico" />
+            <link rel="ícono dribble" type="image/x-icon" href="favicon.ico" />
+            <link rel="ícono facebook" type="image/x-icon" href="favicon.ico" />
         </section>
         <footer>
 
