--- a/index.html
+++ b/index.html
@@ -257,7 +257,25 @@
             <link rel="ícono facebook" type="image/x-icon" href="favicon.ico" />
         </section>
         <footer>
+            
+            <nav>
+                <a href=https://www.youtube.com/watch?v=dQw4w9WgXcQ="surprise">"About"</a>
+                <a href=alt="imagen2">"Services"</a>
+            </nav>
+            <div>
+                <a href="logo"></a>
+            </div>
+            <nav>
+                <a href=alt="imagen3">"Portfolio"</a>
+                <a href=alt="imagen3">"Blog"</a>
+           </nav>
 
+           <p>Follow me on social media</p>
+           <link rel="ícono twitter" type="image/x-icon" href="favicon.ico" />
+            <link rel="ícono instagram" type="image/x-icon" href="favicon.ico" />
+            <link rel="ícono dribble" type="image/x-icon" href="favicon.ico" />
+            <link rel="ícono facebook" type="image/x-icon" href="favicon.ico" />
+            
         </footer>
     </body>
 </html>
