changed bg color

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     </head>
     <body>
         <style>
+            <header>{backgorund-color: #FFD4D0;}
             h1 {
                 font-size: 20px;
                 font-family: 'Tahoma', sans-serif;
@@ -275,7 +276,7 @@
             <link rel="ícono instagram" type="image/x-icon" href="favicon.ico" />
             <link rel="ícono dribble" type="image/x-icon" href="favicon.ico" />
             <link rel="ícono facebook" type="image/x-icon" href="favicon.ico" />
-            
+
         </footer>
     </body>
 </html>
