--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="html">
     <head>
+        <style><header>{backgorund-color: #FFD4D0;}</style>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content='width=device-witdth, initial-scale="1"'>
@@ -8,7 +9,6 @@
     </head>
     <body>
         <style>
-            <header>{backgorund-color: #FFD4D0;}
             h1 {
                 font-size: 20px;
                 font-family: 'Tahoma', sans-serif;
