--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <body>
         <style>
             <li> {backgorund-color: #FFD4D0;}
-                
+
             h1 {
                 font-size: 20px;
                 font-family: 'Tahoma', sans-serif;
@@ -25,9 +25,9 @@
                 font-weight: normal;
             }
             h4 {
-                font-size: 16px;
+                font-size: 40px;
                 font-family: 'Tahoma', sans-serif;
-                font-weight: normal;
+                font-weight: bold;
             }
         </style>
         <section>
