changed stule of doc

--- a/index.html
+++ b/index.html
@@ -1,35 +1,36 @@
 <!DOCTYPE html>
 <html lang="html">
+<style>
+        li {background-color: #FFD4D0;}
+        html {
+            font-family: 'Tahoma', 'sans-serif';
+            font-size: 100%;
+        }
+        h1 {
+            font-size: 20px;
+            font-family: 'Tahoma', sans-serif;
+            font-weight: bold;
+            color: #333;
+        }
+        h2 {
+            font-size: 32px;
+            font-family: 'Tahoma', sans-serif;
+            font-weight: normal;
+        }
+        h4 {
+            font-size: 40px;
+            font-family: 'Tahoma', sans-serif;
+            font-weight: bold;
+        }
+</style>
     <head>
-        <style>
-            <header>{backgorund-color: #FFD4D0;}
-        </style>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content='width=device-witdth, initial-scale="1"'>
         <title>Clase HTML</title>
     </head>
     <body>
-        <style>
-            <li> {backgorund-color: #FFD4D0;}
-
-            h1 {
-                font-size: 20px;
-                font-family: 'Tahoma', sans-serif;
-                font-weight: bold;
-                color: #333;
-            }
-            h2 {
-                font-size: 32px;
-                font-family: 'Tahoma', sans-serif;
-                font-weight: normal;
-            }
-            h4 {
-                font-size: 40px;
-                font-family: 'Tahoma', sans-serif;
-                font-weight: bold;
-            }
-        </style>
+       
         <section>
             <div>
                 <a href="logo"></a>
