changed h2 header span to red

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
             font-family: 'Tahoma', sans-serif;
             font-weight: normal;
         }
+        header span {
+            color: red;
+        }
         h4 {
             font-size: 40px;
             font-family: 'Tahoma', sans-serif;
@@ -30,7 +33,6 @@
         <title>Clase HTML</title>
     </head>
     <body>
-       
         <section>
             <div>
                 <a href="logo"></a>
@@ -43,9 +45,9 @@
                 <a href=alt="imagen3">"Blog"</a>
            </nav>
         </section>
-        <section>
+        <header>
             <h1>UX Designer</h1>
-            <h2>Hi there I'm<br style="color: red"> Sara Jones</h2>
+            <h2>Hi there I'm<br><span>Sara Jones</span></h2>
             <p>Welcome to my portfolio of captivating digital <br> experiences. 
                 Explore my work and let's create something <br>
                 extraordinary together.</p>
@@ -61,7 +63,7 @@
                 <a href=alt="Hire me"></a>
                 <a href=alt="Portfolio"></a>
             </nav>
-        </section>
+        </header>
         <section>
             <h2>About me</h2>
             <p>I'm Sara Jones, a UI/UX designer dedicated to crafting intuitive and visually stunning digital <br>
