changed red to only h2

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             font-family: 'Tahoma', sans-serif;
             font-weight: normal;
         }
-        header span {
+        header h2 span {
             color: red;
         }
         h4 {
