created class to paint red

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             font-family: 'Tahoma', sans-serif;
             font-weight: normal;
         }
-        header h2 span {
+        .colorred {
             color: red;
         }
         h4 {
@@ -47,7 +47,7 @@
         </section>
         <header>
             <h1>UX Designer</h1>
-            <h2>Hi there I'm<br><span>Sara Jones</span></h2>
+            <h2>Hi there I'm<br><span class="colorred">Sara Jones</span></h2>
             <p>Welcome to my portfolio of captivating digital <br> experiences. 
                 Explore my work and let's create something <br>
                 extraordinary together.</p>
@@ -126,7 +126,8 @@
                 <h3>Usability Testing</h3>
                 <p>I perform usability testing and <br>
                     optimize designs websites based on real-user feedback <br>
-                    for seamless interactions.</p></li>
+                    for seamless interactions.</p>
+                </li>
             
         </section>
         <section>
