added list and ordered list

--- a/index.html
+++ b/index.html
@@ -194,36 +194,43 @@
             <h2>Core Design Skills</h2>
             <p>I excel in essential design skills, creating visually stunning and functional digital experiences. From UI <br>
             design to UX research, my passion is to craft effective and memorable digital solutions.</p>
-
-            <label for="Interactiondesign">Interaction Design</label>
-            <progress id="Interactiondesign" max="100" value="60">
-            60%
-            </progress>
-
-            <label for="Usabilitytesting">Usability Testing</label>
-            <progress id="Usabilitytesting" max="100" value="70">
-            70%
-            </progress>
-
-            <label for="Userresearch">User Research</label>
-            <progress id="Userresearch" max="100" value="45">
-            45%
-            </progress>
-
-            <label for="Figma">Figma</label>
-            <progress id="Figma" max="100" value="95">
-            95%
-            </progress>
-
-            <label for="Prototyping">Prototyping</label>
-            <progress id="Prototyping" max="100" value="80">
-            80%
-            </progress>
-
-            <label for="Informationarchitecture">Information Architecture</label>
-            <progress id="Informationarchitecture" max="100" value="50">
-            50%
-            </progress>
+            <ul> 
+                <li>
+                    <label for="Interactiondesign">Interaction Design</label>
+                    <progress id="Interactiondesign" max="100" value="60">
+                    60%
+                    </progress>
+                </li>
+                <li>
+                    <label for="Usabilitytesting">Usability Testing</label>
+                    <progress id="Usabilitytesting" max="100" value="70">
+                    70%
+                    </progress>
+                </li>
+                <li>
+                    <label for="Userresearch">User Research</label>
+                    <progress id="Userresearch" max="100" value="45">
+                    45%
+                    </progress>
+                </li>
+                <li>
+                    <label for="Figma">Figma</label>
+                    <progress id="Figma" max="100" value="95">
+                    95%
+                    </progress>
+                </li>
+                <li>
+                    <label for="Prototyping">Prototyping</label>
+                    <progress id="Prototyping" max="100" value="80">
+                    80%
+                    </progress>
+                </li>
+                <li> <label for="Informationarchitecture">Information Architecture</label>
+                    <progress id="Informationarchitecture" max="100" value="50">
+                    50%
+                    </progress>
+                </li>
+            </ul>  
         </section>
         <section>
             <h2>Get in Touch</h2>
