--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content='width=device-witdth, initial-scale="1"'>
         <title>Clase HTML</title>
+        <link rel="stylesheet" src="style_doc_proyect.css">
     </head>
     <body>
         <section>
