--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content='width=device-witdth, initial-scale="1"'>
         <title>Clase HTML</title>
-        <link rel="stylesheet" href="style_doc_proyect.css">
+        <link rel="stylesheet" href="./style_doc_proyect.css">
     </head>
     <body>
         <section class="'pink_bg">
@@ -26,7 +26,7 @@
                 <a href=alt="imagen3">"Blog"</a>
            </nav>
         </section>
-        <header>
+        <header class="'pink_bg">
             <h1>UX Designer</h1>
             <h2>Hi there I'm<br><span class="colorred">Sara Jones</span></h2>
             <p>Welcome to my portfolio of captivating digital <br> experiences. 
@@ -115,7 +115,7 @@
                 </li>
             
         </section>
-        <section>
+        <section class="'pink_bg">
             <h2>My portfolio</h2>
             <p>Explore my design services, from user interface and experience to prototyping and testing. Let's craft <br>
                 exceptional digital experiences together.
@@ -217,7 +217,7 @@
                 </li>
             </ul>  
         </section>
-        <section>
+        <section class="'pink_bg">
             <h2>Get in Touch</h2>
             <p>
                 Have a question or a project in mind? I'd love to hear from you. Let's <br>
