it was td not dv

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             </div>
             
             <table class="portfolio_imgs">
-                <dv><img
+                <td><img
                     src="./imagenes/Educational_p.png" 
                     alt="Imagen de portafolio 1"
                     data-testo="esto lo usaré en CSS o JS"
@@ -133,9 +133,9 @@
                 <p>Web Design / Usability Testing</p>
                 <a href="link">
                     <img src="./imagenes/ícono_FLECHA.png">
-                </a></dv>
+                </a></td>
 
-                <dv><img
+                <td><img
                 src="./imagenes/travel_a_d.png" 
                 alt="Imagen de portafolio 2"
                 data-testo="esto lo usaré en CSS o JS"
@@ -144,9 +144,9 @@
                 <p>Ux Research/App Design</p>
                 <a href="link">
                     <img src="./imagenes/ícono_FLECHA.png">
-                </a></dv>
+                </a></td>
                 
-                <dv><img
+                <td><img
                 src="./imagenes/personal_p.png" 
                 alt="Imagen de portafolio 3"
                 data-testo="esto lo usaré en CSS o JS"
@@ -155,9 +155,9 @@
                 <p>Web Design</p>
                 <a href="link">
                     <img src="./imagenes/ícono_FLECHA.png">
-                </a></dv>
+                </a></td>
 
-                <dv></dv><img
+                <td><img
                 src="./imagenes/furniture_m_a.png" 
                 alt="Imagen de portafolio 4"
                 data-testo="esto lo usaré en CSS o JS"
@@ -166,9 +166,9 @@
                 <p>App Design</p>
                 <a href="link">
                     <img src="./imagenes/ícono_FLECHA.png">
-                </a></dv>
+                </a></td>
 
-                <dv><img
+                <td><img
                 src="./imagenes/coffee_house_l_p.png" 
                 alt="Imagen de portafolio 5"
                 data-testo="esto lo usaré en CSS o JS"
@@ -177,9 +177,9 @@
                 <p>UX Research/Web Design</p>
                 <a href="link">
                     <img src="./imagenes/ícono_FLECHA.png">
-                </a></dv>
+                </a></td>
 
-                <dv> <img
+                <td> <img
                 src="./imagenes/home_services_p.png" 
                 alt="Imagen de portafolio 6"
                 data-testo="esto lo usaré en CSS o JS"
@@ -188,7 +188,7 @@
                 <p>Web design/Marketing</p>
                 <a href="link">
                     <img src="./imagenes/ícono_FLECHA.png">
-                </a></dv>
+                </a></td>
             </table>
         </section>
         <section>
