--- a/index.html
+++ b/index.html
@@ -52,15 +52,15 @@
                 interfaces. Let's collaborate and shape the future of design together.</p>
             <ul>
                 <li>
-                    <h4 class="pink_letters">502</h4>
+                    <h4 class="pink__letters">502</h4>
                     <h3>Projects done</h3>
                 </li>
                     <li>
-                    <h4 class="pink_letters">10+</h4>
+                    <h4 class="pink__letters">10+</h4>
                     <h3>Years of experience</h3>
                 </li>
                 <li>
-                    <h4 class="pink_letters">273+</h4>
+                    <h4 class="pink__letters">273+</h4>
                     <h3>Clients Served</h3>
                 </li>
             </ul>
